Added --build-arg VERSION to _load and _build
Signed-off-by: Nicholas Wilde <ncwilde43@gmail.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -37,6 +37,7 @@ tasks:
         vars: {VERSION: "{{ .VERSION }}"}
       - >-
         docker buildx build -t "{{ .APP }}:{{ .TAG }}"
+        --build-arg "{{ .VERSION }}"
         --platform "{{ .PLATFORM }}"
         -f ./apps/"{{ .APP }}"/Dockerfile .
     vars:
@@ -52,6 +53,7 @@ tasks:
         vars: {VERSION: "{{ .VERSION }}"}
       - >-
         docker buildx build -t "{{ .APP }}:{{ .TAG }}"
+        --build-arg "{{ .VERSION }}"
         -f ./apps/"{{ .APP }}"/Dockerfile . --load
     vars:
       VERSION:
