feat: add and update goss tests

--- a/apps/jackett/goss.yaml
+++ b/apps/jackett/goss.yaml
@@ -3,11 +3,11 @@ process:
     running: true
 
 port:
-  tcp6:9117:
+  tcp:9117:
     listening: true
 
 http:
   http://localhost:9117/UI/Login:
     status: 200
     body:
-      - '<title>Jackett</title>'
+    - '<title>Jackett</title>'
