--- a/apps/nzbget/goss.yaml
+++ b/apps/nzbget/goss.yaml
@@ -1,13 +1,14 @@
+---
 process:
-  Radarr:
+  nzbget:
     running: true
 
 port:
-  tcp:7878:
+  tcp:6789:
     listening: true
 
 http:
-  http://localhost:7878:
+  http://localhost:6789:
     status: 200
     body:
-    - '<title>Radarr</title>'
+    - '<title>NZBGet</title>'
