--- a/apps/readarr/goss.yaml
+++ b/apps/readarr/goss.yaml
@@ -1,13 +1,13 @@
 process:
-  Radarr:
+  Readarr:
     running: true
 
 port:
-  tcp:7878:
+  tcp:8686:
     listening: true
 
 http:
-  http://localhost:7878:
+  http://localhost:8686:
     status: 200
     body:
-    - '<title>Radarr</title>'
+    - '<title>Readarr</title>'
