--- a/apps/nzbhydra2/goss.yaml
+++ b/apps/nzbhydra2/goss.yaml
@@ -6,3 +6,10 @@ process:
 port:
   tcp:5076:
     listening: true
+
+# # TODO fix this test
+# http:
+#   http://localhost:5076:
+#     status: 200
+#     body:
+#     - '<title>NZBHydra2</title>'
