--- a/apps/plex/goss.yaml
+++ b/apps/plex/goss.yaml
@@ -6,3 +6,10 @@ process:
 port:
   tcp6:32400:
     listening: true
+
+# # TODO fix this test
+# http:
+#   http://localhost:32400:
+#     status: 200
+#     body:
+#     - '<title>Plex</title>'
