--- a/apps/transmission/goss.yaml
+++ b/apps/transmission/goss.yaml
@@ -6,3 +6,9 @@ process:
 port:
   tcp:9091:
     listening: true
+
+http:
+  http://localhost:9091:
+    status: 200
+    body:
+    - '<title>Transmission Web Interface</title>'
