feat: use apt repo for tini

--- a/base/ubuntu/Dockerfile
+++ b/base/ubuntu/Dockerfile
@@ -46,20 +46,11 @@ RUN \
   apt-get install -y \
     ca-certificates \
     curl \
-    gnupg2 \
     locales \
+    tini \
     tzdata \
     vim \
   && locale-gen en_US.UTF-8 \
-  && curl -fsSL -o /sbin/tini "https://github.com/krallin/tini/releases/download/v${TINI_VERSION}/tini-${ARCH}" \
-  && curl -fsSL -o /tini.asc "https://github.com/krallin/tini/releases/download/v${TINI_VERSION}/tini-${ARCH}.asc" \
-  && gpg --batch --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7 \
-  && gpg --batch --verify /tini.asc /sbin/tini \
-  && chmod +x /sbin/tini \
-  && gpgconf --kill all \
-  && \
-  apt-get remove -y \
-    gnupg2 \
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && apt-get autoremove -y \
   && apt-get clean \
