fix: qbittorrent default config and strip binary

--- a/apps/qbittorrent/qBittorrent.conf
+++ b/apps/qbittorrent/qBittorrent.conf
@@ -1,15 +1,6 @@
-[AutoRun]
-enabled=false
-program=
-
-[LegalNotice]
-Accepted=true
-
 [Preferences]
-Connection\UPnP=false
-Connection\PortRangeMin=6881
-Downloads\SavePath=/tmp/downloads
-Downloads\ScanDirsV2=@Variant(\0\0\0\x1c\0\0\0\0)
-Downloads\TempPath=/tmp/incomplete
-WebUI\Address=*
-WebUI\ServerDomains=*
+WebUI\HostHeaderValidation=false
+WebUI\UseUPnP=false
+WebUI\LocalHostAuth=false
+Downloads\SavePath=/config/downloads/
+Downloads\TempPath=/config/downloads/temp/
