don't pin version of youtube-dl, we always want newest version installed

--- a/apps/podsync/Dockerfile
+++ b/apps/podsync/Dockerfile
@@ -36,7 +36,7 @@ WORKDIR /app
 COPY --from=builder /bin/podsync .
 
 # Install system dependencies
-# hadolint ignore=DL3008
+# hadolint ignore=DL3008,DL3013
 RUN \
   apt-get -qq update \
   && \
