add dummy config file

--- a/apps/podsync/Dockerfile
+++ b/apps/podsync/Dockerfile
@@ -70,5 +70,7 @@ USER kah
 
 EXPOSE 8080
 
+COPY ./apps/podsync/config.toml /app/config.toml
 COPY ./apps/podsync/entrypoint.sh /entrypoint.sh
+
 CMD ["/entrypoint.sh"]
