--- a/apps/projector-datagrip/Dockerfile
+++ b/apps/projector-datagrip/Dockerfile
@@ -1,22 +1,14 @@
-# Download IDE
-FROM ghcr.io/k8s-at-home/projector:latest AS ide
-
-ARG IDE_DOWNLOAD_URL
-USER root
-WORKDIR /download
-
-RUN \
-  set -o pipefail \
-  && curl -fsSL $IDE_DOWNLOAD_URL | tar -xz --strip-components 1
-
 # Build final container
 FROM ghcr.io/k8s-at-home/projector:latest
 
 ARG IDE_DOWNLOAD_URL
 USER root
 
-# copy IDE
-COPY --from=ide /download /app/ide
+WORKDIR /app/ide
+
+RUN \
+  set -o pipefail \
+  && curl -fsSL $IDE_DOWNLOAD_URL | tar -xz --strip-components 1
 
 WORKDIR /config
 
