--- a/apps/projector-pycharm-p/Dockerfile
+++ b/apps/projector-pycharm-p/Dockerfile
@@ -1,14 +1,3 @@
-# Download IDE
-FROM ghcr.io/k8s-at-home/projector:latest AS ide
-
-ARG IDE_DOWNLOAD_URL
-USER root
-WORKDIR /download
-
-RUN \
-  set -o pipefail \
-  && curl -fsSL $IDE_DOWNLOAD_URL | tar -xz --strip-components 1
-
 # Build final container
 FROM ghcr.io/k8s-at-home/projector:latest
 
@@ -16,8 +5,11 @@ ARG IDE_DOWNLOAD_URL
 USER root
 WORKDIR /app
 
-# copy IDE
-COPY --from=ide /download /app/ide
+WORKDIR /app/ide
+
+RUN \
+  set -o pipefail \
+  && curl -fsSL $IDE_DOWNLOAD_URL | tar -xz --strip-components 1
 
 WORKDIR /config
 
