update version arg to self download

--- a/apps/projector-pycharm-p/Dockerfile
+++ b/apps/projector-pycharm-p/Dockerfile
@@ -1,15 +1,13 @@
 # Build final container
 FROM ghcr.io/k8s-at-home/projector:latest
 
-ARG IDE_DOWNLOAD_URL
 USER root
-WORKDIR /app
 
 WORKDIR /app/ide
 
 RUN \
   set -o pipefail \
-  && curl -fsSL $IDE_DOWNLOAD_URL | tar -xz --strip-components 1
+  && curl -fsSL "https://download.jetbrains.com/python/pycharm-professional-${VERSION}.tar.gz" | tar -xz --strip-components 1
 
 WORKDIR /config
 
