--- a/apps/projector-goland/Dockerfile
+++ b/apps/projector-goland/Dockerfile
@@ -1,19 +1,20 @@
 # Build final container
 FROM ghcr.io/k8s-at-home/projector:latest
 
-ARG IDE_DOWNLOAD_URL
+ARG VERSION
+
 USER root
 
 WORKDIR /app/ide
 
 RUN \
   set -o pipefail \
-  && curl -fsSL $IDE_DOWNLOAD_URL | tar -xz --strip-components 1
+  && curl -fsSL "https://download.jetbrains.com/go/goland-${VERSION}.tar.gz" | tar -xz --strip-components 1
 
 WORKDIR /config
 
 RUN \
-  chmod -R u=rwX,go=rX /app \
+     chmod -R u=rwX,go=rX /app \
   && chown -R kah:kah /app
 
 USER kah
