--- a/apps/projector-webstorm/Dockerfile
+++ b/apps/projector-webstorm/Dockerfile
@@ -1,14 +1,13 @@
 # Build final container
 FROM ghcr.io/k8s-at-home/projector:latest
 
-ARG IDE_DOWNLOAD_URL
 USER root
 
 WORKDIR /app/ide
 
 RUN \
   set -o pipefail \
-  && curl -fsSL $IDE_DOWNLOAD_URL | tar -xz --strip-components 1
+  && curl -fsSL "https://download.jetbrains.com/webstorm/WebStorm-${VERSION}.tar.gz" | tar -xz --strip-components 1
 
 WORKDIR /config
 
