Fix hadolint errors

--- a/apps/projector-clion/Dockerfile
+++ b/apps/projector-clion/Dockerfile
@@ -1,5 +1,5 @@
 # Build final container
-FROM ghcr.io/k8s-at-home/projector:latest
+FROM ghcr.io/k8s-at-home/projector:1.1.2
 
 ARG VERSION
 
@@ -7,6 +7,7 @@ USER root
 
 WORKDIR /app/ide
 
+# hadolint ignore=DL4006,DL3015,DL3008
 RUN \
      curl -fsSL "https://download.jetbrains.com/cpp/CLion-${VERSION}.tar.gz" | tar -xz --strip-components 1 \
   && apt-get -qq update \
