use latest and ignore v when pulling

--- a/apps/projector-idea-u/Dockerfile
+++ b/apps/projector-idea-u/Dockerfile
@@ -1,5 +1,6 @@
 # Build final container
-FROM ghcr.io/k8s-at-home/projector:1.1.2
+# hadolint ignore=DL3007
+FROM ghcr.io/k8s-at-home/projector:latest
 
 ARG VERSION
 
@@ -9,7 +10,7 @@ WORKDIR /app/ide
 
 # hadolint ignore=DL4006
 RUN \
-     curl -fsSL "https://download.jetbrains.com/idea/ideaIU-${VERSION}.tar.gz" | tar -xz --strip-components 1 \
+     curl -fsSL "https://download.jetbrains.com/idea/ideaIU-${VERSION#*v}.tar.gz" | tar -xz --strip-components 1 \
   && chmod -R u=rwX,go=rX /app \
   && chown -R kah:kah /app
 
