feat: fix app permissions - remove 2 images

--- a/apps/appdaemon/Dockerfile
+++ b/apps/appdaemon/Dockerfile
@@ -27,8 +27,6 @@ RUN \
   && \
   pip3 install --no-cache-dir -U . \
   && \
-  printf "UpdateMethod=docker\nPackageVersion=%s\nPackageAuthor=[Team k8s-at-home](https://github.com/k8s-at-home)" "${VERSION}" > /app/package_info \
-  && \
   apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && apt-get autoremove -y \
   && apt-get clean \
@@ -38,6 +36,7 @@ RUN \
     /var/lib/apt/lists/* \
     /var/tmp/ \
   && chown -R kah:kah /app \
+  && chmod -R u=rwX,go=rX /app \
   && printf "umask %d" "${UMASK}" >> /etc/bash.bashrc \
   && update-ca-certificates
 
