Renamed haste to haste-server
Signed-off-by: Nicholas Wilde <ncwilde43@gmail.com>

--- a/apps/haste-server/Dockerfile
+++ b/apps/haste-server/Dockerfile
@@ -107,5 +107,5 @@ WORKDIR /app
 VOLUME /app
 USER kah
 EXPOSE ${PORT}
-COPY ./apps/haste/entrypoint.sh /entrypoint.sh
+COPY ./apps/haste-server/entrypoint.sh /entrypoint.sh
 CMD ["/entrypoint.sh"]
