--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -103,13 +103,13 @@ jobs:
       with:
         platforms: amd64,arm64
 
-    - name: Login to GHCR
-      uses: docker/login-action@v1
-      if: github.event_name != 'pull_request'
-      with:
-        registry: ghcr.io
-        username: ${{ secrets.GHCR_USERNAME }}
-        password: ${{ secrets.GHCR_TOKEN }}
+#     - name: Login to GHCR
+#       uses: docker/login-action@v1
+#       if: github.event_name != 'pull_request'
+#       with:
+#         registry: ghcr.io
+#         username: ${{ secrets.GHCR_USERNAME }}
+#         password: ${{ secrets.GHCR_TOKEN }}
 
     # Install and configure Buildx
     - name: Set up Docker Buildx
@@ -157,7 +157,8 @@ jobs:
         context: .
         platforms: ${{ steps.prep.outputs.platform }}
         file: ./${{ steps.prep.outputs.category }}/${{ matrix.container }}/Dockerfile
-        push: ${{ steps.prep.outputs.push }}
+        push: false
+#         push: ${{ steps.prep.outputs.push }}
         tags: |
           ghcr.io/${{ github.repository_owner }}/${{ matrix.container }}:latest
           ghcr.io/${{ github.repository_owner }}/${{ matrix.container }}:v${{ steps.prep.outputs.version }}
