--- a/apps/leaf2mqtt/Dockerfile
+++ b/apps/leaf2mqtt/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 # hadolint ignore=DL3008,DL3015,SC2086
 RUN \
-  && git clone https://github.com/mitsumaui/leaf2mqtt.git . \
+  git clone https://github.com/mitsumaui/leaf2mqtt.git . \
   && pub get \
   && pub get --offline 
 
