Add a few plugins
Signed-off-by: anthr76 <hello@anthonyrabbito.com>

--- a/apps/coredns/Dockerfile
+++ b/apps/coredns/Dockerfile
@@ -23,6 +23,7 @@ RUN \
   && git checkout ${VERSION} \
   && go get github.com/openshift/coredns-mdns \
   && go get github.com/coredns/alternate \
+  && go get github.com/jwhited/wgsd \
   && go mod tidy
 
 COPY ./apps/coredns/plugin.cfg plugin.cfg
