--- a/apps/coredns/plugin.cfg
+++ b/apps/coredns/plugin.cfg
@@ -67,3 +67,4 @@ on:github.com/coredns/caddy/onevent
 sign:sign
 mdns:github.com/openshift/coredns-mdns
 alternate:github.com/coredns/alternate
+wgsd:github.com/jwhited/wgsd
