--- a/apps/coredns/plugin.cfg
+++ b/apps/coredns/plugin.cfg
@@ -68,3 +68,5 @@ sign:sign
 mdns:github.com/openshift/coredns-mdns
 alternate:github.com/coredns/alternate
 wgsd:github.com/jwhited/wgsd
+git:github.com/miekg/coredns-git
+k8s_gateway:github.com/ori-edge/k8s_gateway
